更新至卷84節6
Former-commit-id: cfba63f64216926d3889d02763b5d44854a15d32

--- a/3_專項研究/3.1_時代/西晉/八王之亂始末.md
+++ b/3_專項研究/3.1_時代/西晉/八王之亂始末.md
@@ -16,10 +16,13 @@ export_on_save:
   - 司馬倫應反對黨邀請欲除賈后，孫秀獻計使兩敗俱傷，反間使賈南風殺司馬遹
   - 司馬倫殺賈南風，清洗其黨羽，孫秀掌實權
   - 司馬允討逆失敗被殺；司馬冏對分封不滿
-  - 司馬倫篡位稱帝
 - 第三亂：三王除司馬倫301
-  - 司馬倫孫秀亂政，冏穎顒三王起兵誅之，復晉惠帝位
+  - 司馬倫加九錫，篡位稱帝，與孫秀亂政
+  - 冏穎顒三王起兵誅孫秀司馬倫，各懷鬼胎但最終勝利
+  - 賜死司馬倫，晉惠帝復位
   - 三王論功，司馬穎自請歸國，司馬冏執掌大權
+- 第四亂：司馬冏
+  - 司馬蕤欲誅司馬冏被反殺
 
 ## 八王之亂關鍵人物表
 
@@ -27,20 +30,21 @@ export_on_save:
 --|--|--|--|--|--
 司馬亮|汝南王|司馬懿子|291|八王|司馬炎欲托孤被楊駿排擠，楊駿除後被司馬瑋殺
 司馬瑋|楚王|司馬炎子|291|八王|賈南風使進京誅楊駿，借刀殺司馬亮而後被誅
-司馬倫|趙王|司馬懿子|301|八王|
-司馬冏|齊王|司馬師孫，實際司馬昭||八王|
-司馬穎|成都王|司馬炎子||八王|
-司馬顒|河間王|司馬孚孫||八王|
+司馬倫|趙王|司馬懿子|301|八王|主持誅除賈南風，成功後篡位稱帝，被三王起義敗後賜死
+司馬冏|齊王|司馬師孫，實際司馬昭||八王|共誅賈南風有功無賞，三王起義首發檄文討伐司馬倫
+司馬穎|成都王|司馬炎子||八王|三王起義興重兵討伐司馬倫
+司馬顒|河間王|司馬孚孫||八王|三王起義猶豫不決而終共討司馬倫
+司馬乂|長沙王|司馬炎子||八王|參與討伐司馬倫
 司馬炎|晉武帝|司馬昭子|290|皇帝|過度分封諸王，選太子失誤，死前託孤失敗，種八王之亂因
 司馬衷|晉惠帝|司馬炎子|307|皇帝|昏庸無能，八王之亂主因
 司馬遹||司馬衷子|300|宗室|原隔代儲君，被賈南風廢殺
 賈南風|皇后|司馬衷后|300|賈后黨|挑起第一亂除楊駿殺二王掌權，第二亂殺司馬遹被司馬倫殺
 楊駿||司馬炎丈人|291|楊駿黨|司馬炎託孤，排擠司馬亮而專權，被賈南風殺
-衛瓘|||291||功臣，親附司馬亮，欲除司馬瑋被反殺
+衛瓘|||291|功臣|功臣，親附司馬亮，欲除司馬瑋被反殺
 張華|||300|賈后黨|盡心治國，貪戀權位，牽連賈后被殺
-孫秀|||301|司馬倫黨|
+孫秀|||301|司馬倫黨|司馬倫核心心腹，實際掌權者
 司馬允|淮南王|司馬炎子|300|宗室|忠於宗室，有威望，討伐三楊，反司馬倫中計身死
-司馬肜|
+司馬肜|梁王|司馬懿子||宗室|平庸宗室，誰也不得罪，保持爵位
 
 ## 八王之亂人物關係圖
 
