--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -10,6 +10,7 @@ export_on_save:
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤
+- 厭勝制敵：王莽、司馬倫
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩
 - 虐待士卒：霍去病、李廣利、張飛
 - 虐待動物：田單、楊琁
@@ -77,6 +78,7 @@ export_on_save:
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓
+- 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、朱棣
