漢魏世系圖表整理優化
Former-commit-id: 8b63f7af1a21ce88a51d83e860d49ec54754f4e2

--- a/2_世系圖表/2.1_帝王/三國/曹魏世系圖.md
+++ b/2_世系圖表/2.1_帝王/三國/曹魏世系圖.md
@@ -7,7 +7,7 @@ export_on_save:
 
 ## 世系表
 
-
+@import "曹魏世系表.csv"
 
 ## 曹氏關系圖
 
@@ -46,6 +46,9 @@ class 曹丕,曹叡,曹芳,曹髦,曹奐 king
 
 classDef control fill:#ccffff
 class 曹爽 control
+
+classDef founder fill:#ffffee
+class 曹操 founder
 ```
 
 ## 夏侯氏關系圖
