--- a/3_專項研究/3.1_時代/西晉/八王之亂始末.md
+++ b/3_專項研究/3.1_時代/西晉/八王之亂始末.md
@@ -21,8 +21,13 @@ export_on_save:
   - 冏穎顒三王起兵誅孫秀司馬倫，各懷鬼胎但最終勝利
   - 賜死司馬倫，晉惠帝復位
   - 三王論功，司馬穎自請歸國，司馬冏執掌大權
-- 第四亂：司馬冏
+- 第四亂：司馬冏敗303
   - 司馬蕤欲誅司馬冏被反殺
+  - 司馬冏執掌大權，招攬人才，開始驕奢淫逸，人才又去
+  - 司馬顒納李含諫，發檄文討伐司馬冏，欲借司馬冏刀殺司馬乂，再改立司馬穎
+  - 司馬冏司馬乂宮內開戰，大亂三日，司馬乂持晉惠帝，最終斬司馬冏
+  - 司馬穎遙控司馬乂，成為實際掌權者
+- 第五亂：司馬穎
 
 ## 八王之亂關鍵人物表
 
@@ -34,7 +39,7 @@ export_on_save:
 司馬冏|齊王|司馬師孫，實際司馬昭||八王|共誅賈南風有功無賞，三王起義首發檄文討伐司馬倫
 司馬穎|成都王|司馬炎子||八王|三王起義興重兵討伐司馬倫
 司馬顒|河間王|司馬孚孫||八王|三王起義猶豫不決而終共討司馬倫
-司馬乂|長沙王|司馬炎子||八王|參與討伐司馬倫
+司馬乂|長沙王|司馬炎子||八王|晉室忠良，參與討伐司馬倫
 司馬炎|晉武帝|司馬昭子|290|皇帝|過度分封諸王，選太子失誤，死前託孤失敗，種八王之亂因
 司馬衷|晉惠帝|司馬炎子|307|皇帝|昏庸無能，八王之亂主因
 司馬遹||司馬衷子|300|宗室|原隔代儲君，被賈南風廢殺
@@ -72,4 +77,13 @@ graph TB
 classDef king fill:#ffee00
 class 齊王司馬冏,楚王司馬瑋,長沙王司馬乂,成都王司馬穎,汝南王司馬亮,趙王司馬倫,河間王司馬顒,東海王司馬越 king 
 
+```
+
+- 八王之亂權力接力棒
+```mermaid
+graph TB
+
+楊駿-->賈南風
+賈南風-->司馬倫
+司馬倫-->司馬冏
 ```
