更新至卷85節2
Former-commit-id: a5a28a49ae5b266b052654565d6ebe9886f95385

--- a/5_筆記/资治通鉴84.md
+++ b/5_筆記/资治通鉴84.md
@@ -30,8 +30,9 @@ export_on_save:
 ## 70606 封賞功臣諸王
 > 冏辟新興劉殷為軍諮祭酒->鎮下邳
 
-## 70607 逼反流民及李特據蜀
+## 70607 流民起義及李特據蜀
 > 初，朝廷符下秦、雍州->求救于梁州及南夷校尉
+- 閻式：弱而不可轻者民也，今趣之不以理，众怒难犯，恐为祸不浅。
 
 ## 70608 李特益盛
 > 十二月，穎昌康公何卲薨->以毅為刺史
@@ -41,3 +42,4 @@ export_on_save:
 
 ## 70610 司馬顒檄及司馬冏死
 > 冏以河间王颙本附赵王伦->覆讯清允
+- 八王之亂最亂剪影：冏使人执驺虞幡唱云：“长沙王矫诏。”乂又称“大司马谋反”。是夕，城内大战，飞矢雨集，火光属天。帝幸上东门，矢集御前，群臣死者相枕。
