--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -45,7 +45,7 @@ export_on_save:
 - 舍身為民：魏咎、劉璋
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範
-- 長壽：趙佗、張蒼、伏生、許敬、士燮、張臶、呂岱、來敏、拓跋力微
+- 長壽：趙佗、張蒼、伏生、許敬、士燮、張臶、呂岱、來敏、拓跋力微、范長生
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅
@@ -92,6 +92,7 @@ export_on_save:
 - 仁義之師：趙充國、漢光武帝
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
+- 女戰士：羅皇太后
 - 女智謀家：辛憲英、習英習
 - 誓不改嫁：夏侯令女
 - 女權主義者∶程咸
