更新至卷85節6
Former-commit-id: 2efafe899b09a14c5df82fb998d6f53ef1eb5781

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -38,6 +38,8 @@ export_on_save:
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
 - 口吃：韓非、周昌、司馬相如、鄧艾、曹叡
 - 狐臭：楚懷王
+- 消渴(糖尿病)：司馬相如
+- 羸瘵(肺結核)：賀循
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
