更新至卷85節10
Former-commit-id: d099618c2e2fae1c32b6d581a4deed3a1b23aff7

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -22,6 +22,7 @@ export_on_save:
 - 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸
 - 疽發背死：范增、劉焉、曹休
 - 自焚：魏咎、涉間、孝平王皇后
+- 燒死：司馬乂
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
@@ -111,7 +112,7 @@ export_on_save:
 - 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
-- 相愛相殺：張耳+陳餘、孫權+張昭
+- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈
 - 自築小屋：袁閎、申屠蟠
 - 商界精英：呂不韋、孟佗
 - 被姦尸：呂后、漢桓帝馮貴人
