完成卷85，添加漢趙世系圖表
Former-commit-id: 4b8ffdb04f05e8302bd3dfbcb93dd0508cc2a572

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -99,6 +99,10 @@ export_on_save:
 - 女智謀家：辛憲英、習英習
 - 誓不改嫁：夏侯令女
 - 女權主義者∶程咸
+- 白眉：劉曜
+- 紅眼：劉曜
+- 重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武
+- 三乳：李淵
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲
