更新人物卷86節1，添加後趙世系圖表
Former-commit-id: b1d46eca3ac4f1f4bf8c8290b64d10e80f6654bc

--- a/5_筆記/资治通鉴85.md
+++ b/5_筆記/资治通鉴85.md
@@ -45,12 +45,15 @@ export_on_save:
 2|304|立|司馬越|司馬穎驕奢，司馬越起兵討伐，立
 -2|304|廢|張方|食人魔張方進京，為司馬越敵對陣營，廢
 3|304|立|洛陽留臺荀藩、劉暾等|晉惠帝被張方劫至長安，暫時穩定，立
+-3|305|廢|張方|還是看着不爽，遠程廢
+A|305||皇甫重|從金墉城迎出，以后令發兵討張方，旋敗
 
 ## 70710 王浚討穎司馬睿走張方進京
 > 初，三王之起兵討趙王倫也->复废覃及羊后
 
 ## 70711 劉淵助晉及王浚破鄴
 > 初，太弟颖表匈奴左贤王刘渊为冠军将军->同党皆夷三族
+- 死人跟鬧着玩似的：浚还蓟，以鲜卑多掠人妇女，命：“有敢挟藏者斩！”于是沈于易水者八千人。
 
 ## 70712 李雄稱王及劉淵建國
 > 李雄以范长生有名德->数公何足道哉
