更新人物至卷86節4
Former-commit-id: a47bbcb52e6587d7e6469d5ad728ae9b6ea17772

--- a/5_筆記/资治通鉴85.md
+++ b/5_筆記/资治通鉴85.md
@@ -47,6 +47,8 @@ export_on_save:
 3|304|立|洛陽留臺荀藩、劉暾等|晉惠帝被張方劫至長安，暫時穩定，立
 -3|305|廢|張方|還是看着不爽，遠程廢
 A|305||皇甫重|從金墉城迎出，以后令發兵討張方，旋敗
+4|305|立|周權|政變自稱平西將軍，立
+-4|305|廢|何喬|攻殺周權，廢
 
 ## 70710 王浚討穎司馬睿走張方進京
 > 初，三王之起兵討趙王倫也->复废覃及羊后
