更新至卷86節5
Former-commit-id: 9504ee67b4ca07a6ce893a58095ce88544238b73

--- a/5_筆記/资治通鉴85.md
+++ b/5_筆記/资治通鉴85.md
@@ -41,7 +41,7 @@ export_on_save:
 序號|時間|廢立|廢立者|動機
 --|--|--|--|--
 1|300|立|孫秀、司馬倫|賈南風被除，晉惠帝需要皇后，姥爺是孫秀親戚，立
--1|304|廢|司馬穎|司馬穎想做接班人，廢
+-1|304|廢|司馬穎|想做接班人，廢
 2|304|立|司馬越|司馬穎驕奢，司馬越起兵討伐，立
 -2|304|廢|張方|食人魔張方進京，為司馬越敵對陣營，廢
 3|304|立|洛陽留臺荀藩、劉暾等|晉惠帝被張方劫至長安，暫時穩定，立
@@ -49,6 +49,7 @@ export_on_save:
 A|305||皇甫重|從金墉城迎出，以后令發兵討張方，旋敗
 4|305|立|周權|政變自稱平西將軍，立
 -4|305|廢|何喬|攻殺周權，廢
+5|306|立|司馬越|破司馬顒，奉帝還洛陽，立
 
 ## 70710 王浚討穎司馬睿走張方進京
 > 初，三王之起兵討趙王倫也->复废覃及羊后
