--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -25,6 +25,7 @@ export_on_save:
 - 燒死：司馬乂
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠
+- 食餅毒死：漢質帝、晉惠帝
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
@@ -34,7 +35,7 @@ export_on_save:
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性
 - 愚忠：王累
-- 摳門：樊伷、曹洪
+- 摳門：樊伷、曹洪、司馬騰
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
 - 口吃：韓非、周昌、司馬相如、鄧艾、曹叡
@@ -58,7 +59,7 @@ export_on_save:
 - 名廚：伊尹、易牙
 - 狗監：楊得意
 - 牧豬：公孫弘、吳祐、公沙穆
-- 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子
+- 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑
 - 牧羊：楚義帝、卜式、路溫舒、劉盆子
 - 牧牛：鄧艾
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進
@@ -95,7 +96,7 @@ export_on_save:
 - 仁義之師：趙充國、漢光武帝
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
-- 女戰士：羅皇太后
+- 女戰士：孫夫人、羅皇太后、李秀
 - 女智謀家：辛憲英、習英習
 - 誓不改嫁：夏侯令女
 - 女權主義者∶程咸
