--- a/5_筆記/资治通鉴85.md
+++ b/5_筆記/资治通鉴85.md
@@ -50,6 +50,8 @@ A|305||皇甫重|從金墉城迎出，以后令發兵討張方，旋敗
 4|305|立|周權|政變自稱平西將軍，立
 -4|305|廢|何喬|攻殺周權，廢
 5|306|立|司馬越|破司馬顒，奉帝還洛陽，立
+-5|311|廢|劉曜|永嘉之亂被劉曜擄走，廢
+6|318|立|劉曜|劉曜喜歡，二次皇后，立
 
 ## 70710 王浚討穎司馬睿走張方進京
 > 初，三王之起兵討趙王倫也->复废覃及羊后
