--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -9,7 +9,7 @@ export_on_save:
 - 拒絕稱帝王：季札、公子閭、劉虞
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎
 - 烹子食子：易牙、樂羊
-- 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤
+- 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 厭勝制敵：王莽、司馬倫
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩
 - 虐待士卒：霍去病、李廣利、張飛
@@ -49,7 +49,7 @@ export_on_save:
 - 舍身為民：魏咎、劉璋
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範
-- 長壽：趙佗、張蒼、伏生、許敬、士燮、張臶、呂岱、來敏、拓跋力微、范長生
+- 長壽：趙佗、張蒼、伏生、許敬、士燮、張臶、呂岱、來敏、拓跋力微、范長生、劉寔
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅
@@ -73,6 +73,7 @@ export_on_save:
 - 媽寶：共叔段、梁王劉武、昭平君
 - 爸寶：州吁
 - 射天罵天：武乙、紂、宋康王、上官安
+- 唯恐天下不亂：漢趙劉靈
 - 愛打小報告：息夫躬、廉昭
 - 裸奔愛好者：桑扈、上官安、劉伶
 - 飆車愛好者：劉賀
