更新人物至卷87節3
Former-commit-id: 262f1dc48aa3450f6dcf1f0536c2fb1ef61a6817

--- a/3_專項研究/3.1_時代/西晉/八王之亂始末.md
+++ b/3_專項研究/3.1_時代/西晉/八王之亂始末.md
@@ -62,9 +62,12 @@ export_on_save:
   - 司馬越掌控大權，毒死晉惠帝，立晉懷帝為傀儡
   - 司馬越誅司馬顒
   - 李雄稱帝，石勒王彌等投劉淵，五胡之亂勢成
-- 後續：永嘉之亂司馬越死 311
+- 後續：司馬越死及永嘉之亂 311
   - 死亡：司馬越；受益人：五胡
   - 晉懷帝親政，司馬越不滿，出鎮許昌
+  - 汲桑叛亂，擡出司馬穎棺材膜拜，汲桑死後棺材被扔井中
+  - 晉朝政愈亂，屢遭漢趙攻擊，司馬越憂懼而死，石勒挫骨揚灰
+  - 接續永嘉之亂，晉懷帝及百官被漢趙擄走
 
 ## 八王之亂關鍵人物表
 
