--- a/5_筆記/资治通鉴86.md
+++ b/5_筆記/资治通鉴86.md
@@ -33,6 +33,7 @@ export_on_save:
 
 ## 70808 陳敏夷三族
 > 春，正月，癸丑，大赦，改元->越妃兄也
+- 敏眾狐疑未決,榮以白羽扇麾之,眾皆潰去。——顧榮繼承了諸葛亮白羽扇的魔法攻擊
 
 ## 70809 汲桑燒鄴及苟晞退之
 > 西陽夷寇江夏->分荊州、江州八郡為湘州
