更新至卷87節8
Former-commit-id: 76494012897ac1b6134f209ef56e3fa61122fb5d

--- a/3_專項研究/3.1_時代/西晉/八王之亂始末.md
+++ b/3_專項研究/3.1_時代/西晉/八王之亂始末.md
@@ -66,7 +66,7 @@ export_on_save:
   - 死亡：司馬越；受益人：五胡
   - 晉懷帝親政，司馬越不滿，出鎮許昌
   - 汲桑叛亂，擡出司馬穎棺材膜拜，汲桑死後棺材被扔井中
-  - 晉朝政愈亂，屢遭漢趙攻擊，司馬越憂懼而死，石勒挫骨揚灰
+  - 晉朝政愈亂，屢遭漢趙攻擊，司馬越與苟晞不合，憂懼而死，石勒挫骨揚灰
   - 接續永嘉之亂，晉懷帝及百官被漢趙擄走
 
 ## 八王之亂關鍵人物表
@@ -80,7 +80,7 @@ export_on_save:
 司馬穎|成都王|司馬炎子|306|八王|重兵遙控王|掌重兵，三王起義興重兵討伐司馬倫，成功後歸藩以收買人心，討敗司馬冏後遙控政局，被司馬越王浚敗，逃亡途中死
 司馬顒|河間王|司馬孚孫|306|八王|猶豫和事佬、張方吉祥物|三王起義猶豫不決而終共討司馬倫，首發檄文討伐司馬冏，推舉司馬穎而部下張方失控，殺張方司馬越不領情，終被殺
 司馬乂|長沙王|司馬炎子|304|八王|忠良戰神|從司馬穎共討伐司馬倫，司馬冏掌權驕奢而除之，初服從司馬穎後與決裂，顒穎聯合攻之不勝，被司馬越收，借張方手炙殺
-司馬越|東海王|司馬防孫，司馬泰子|311|八王|戰五渣漁翁|顒穎攻乂時，擔心司馬乂兵敗受牽連，夜收金墉城，借張方手殺之，討伐司馬穎不敵，為盟主引五胡攻張方司馬顒，最終勝出八王之亂，毒殺晉惠帝，永嘉之亂死
+司馬越|東海王|司馬防孫，司馬泰子|311|八王|戰五渣漁翁|顒穎攻乂時，擔心司馬乂兵敗受牽連，夜收金墉城，借張方手殺之，討伐司馬穎不敵，為盟主引五胡攻張方司馬顒，最終勝出八王之亂，毒殺晉惠帝，與苟晞不合永嘉之亂死
 司馬炎|晉武帝|司馬昭子|290|皇帝||過度分封諸王，選太子失誤，死前託孤失敗，種八王之亂因
 司馬衷|晉惠帝|司馬炎子|307|皇帝|親征坦克帝|昏庸無能，八王之亂主因
 司馬熾|晉懷帝|司馬炎子|313|皇帝||八王之亂後司馬越傀儡
