--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -27,7 +27,7 @@ export_on_save:
 - 跳樓：揚雄、緑珠
 - 食餅毒死：漢質帝、晉惠帝
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
-- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母
+- 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 清醒子女：胡毋謙之、張韙
 - 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋
@@ -42,6 +42,7 @@ export_on_save:
 - 狐臭：楚懷王
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
+- 陽痿：膠西王劉端、司馬保
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
@@ -108,9 +109,9 @@ export_on_save:
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲
-- 死忠老外：呼尤徽
+- 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
-- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、
+- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
