--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -7,7 +7,7 @@ export_on_save:
 
 - 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇
 - 拒絕稱帝王：季札、公子閭、劉虞
-- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎
+- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 厭勝制敵：王莽、司馬倫
@@ -50,7 +50,7 @@ export_on_save:
 - 舍身為民：魏咎、劉璋
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範
-- 長壽：趙佗、張蒼、伏生、許敬、士燮、張臶、呂岱、來敏、拓跋力微、范長生、劉寔
+- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅
