--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -119,7 +119,7 @@ export_on_save:
 - 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
-- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈
+- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂
 - 自築小屋：袁閎、申屠蟠
 - 商界精英：呂不韋、孟佗
 - 被姦尸：呂后、漢桓帝馮貴人
