--- a/5_筆記/资治通鉴88.md
+++ b/5_筆記/资治通鉴88.md
@@ -40,6 +40,7 @@ export_on_save:
 
 ## 71009 王浚衰慕容廆盛
 > 石勒攻李恽于上白->光遣其子孟萇討之，不能克
+- 張光打反賊。手下收了反賊的錢，說人不錯可以招安，張光同意。手下發現反賊挺有錢的，說人不行得殺，張光又同意。手下殺反賊，反賊女婿報仇，張光不敵，疾呼為國捐軀死得其所，全家被殺
 
 ## 71010 晉愍帝分陝及司馬睿偏安
 > 壬辰，以琅邪王睿為左丞相->睿以時方多事，不能從
