--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -98,7 +98,7 @@ export_on_save:
 - 仁義之師：趙充國、漢光武帝
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
-- 女戰士：孫夫人、羅皇太后、李秀
+- 女戰士：孫夫人、羅皇太后、李秀、荀灌
 - 女智謀家：辛憲英、習英習
 - 誓不改嫁：夏侯令女
 - 女權主義者∶程咸
