--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -108,7 +108,7 @@ export_on_save:
 - 三乳：李淵
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
-- 萬人迷：黃憲
+- 萬人迷：黃憲、溫嶠
 - 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
 - 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺
