--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -38,7 +38,7 @@ export_on_save:
 - 摳門：樊伷、曹洪、司馬騰
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
-- 口吃：韓非、周昌、司馬相如、鄧艾、曹叡
+- 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞
 - 狐臭：楚懷王
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
@@ -94,6 +94,7 @@ export_on_save:
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
+- 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝
 - 奇葩爵位：羹頡侯劉信、不義侯子密
@@ -136,4 +137,4 @@ export_on_save:
 - 欒巴：凈身不徹底的宦官，娶妻生子，名列八使
 - 三姓皇后：鄧猛女
 - 減肥困難：王戎子王綏`有美号而太肥，戎令食糠，而肥愈甚也。`
-- 孝感動天與祖己流放；埋兒奉母與楢山節考；臥冰求鯉與荀令傷神；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶
+- 孝感動天與祖己流放曾子挨打；臥冰求鯉與荀令傷神；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶
