--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -52,7 +52,7 @@ export_on_save:
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範
 - 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安
-- 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人
+- 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅
 - 矬：周舉、張松、朱然、宋配
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
@@ -120,7 +120,7 @@ export_on_save:
 - 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
-- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂
+- 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾
 - 自築小屋：袁閎、申屠蟠
 - 商界精英：呂不韋、孟佗
 - 被姦尸：呂后、漢桓帝馮貴人
