--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -48,6 +48,7 @@ export_on_save:
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
 - 感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮
 - 舍身為民：魏咎、劉璋
+- 反戰為民：鞠彭
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範
 - 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔
