--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -46,7 +46,7 @@ export_on_save:
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
-- 感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮
+- 感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮、祖逖
 - 舍身為民：魏咎、劉璋
 - 反戰為民：鞠彭
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
@@ -70,6 +70,8 @@ export_on_save:
 - 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
+- 反復搖擺：徐龕
+- 死前暴擊：項羽、段文鴦
 - 強力刺客：公孫述、任尚
 - 漢奸：中行説、趙信、衛律、盧芳、漢奸韓琮
 - 媽寶：共叔段、梁王劉武、昭平君
