更新人物至卷92節3
Former-commit-id: 0a3d6493619d47bf4b788aa106851c0e2356c0d9

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -71,6 +71,7 @@ export_on_save:
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
 - 反復搖擺：徐龕
+- 猶豫不決：甘卓
 - 死前暴擊：項羽、段文鴦
 - 強力刺客：公孫述、任尚
 - 漢奸：中行説、趙信、衛律、盧芳、漢奸韓琮
