更新人物至卷92節8
Former-commit-id: bcf398ac2a6d84f6304a85a2b9031116fdd22f54

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -11,12 +11,13 @@ export_on_save:
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 厭勝制敵：王莽、司馬倫
-- 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩
+- 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安
 - 虐待士卒：霍去病、李廣利、張飛
 - 虐待動物：田單、楊琁
 - 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來、楊芷
-- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄
+- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜
+- 吐哺：周公、郗鑒
 - 死於廁所：晉景公、韓馥
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
 - 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸
