完成卷92，刪除卷目表冗餘的起始結束點
Former-commit-id: 72001de2446aa1cb42117a30fb5633247899b439

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -95,6 +95,7 @@ export_on_save:
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、朱棣
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘、王戎
+- 裝醉大師：王允之
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
