更新至卷94節10
Former-commit-id: 81d14d16f41dbca206db6b5aafe6dfa0edc29617

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -81,16 +81,16 @@ export_on_save:
 - 射天罵天：武乙、紂、宋康王、上官安
 - 唯恐天下不亂：漢趙劉靈
 - 愛打小報告：息夫躬、廉昭
-- 裸奔愛好者：桑扈、上官安、劉伶
+- 暴露狂：桑扈、上官安、劉伶、張滿
 - 飆車愛好者：劉賀
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 女裝大佬：曹叡、何晏
 - 娘砲：李固、曹植、何晏、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃
 - 屠伯：嚴延年、苟晞
-- 食人魔：程昱、張方
+- 食人魔：程昱、張方、石邃
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、朱棣
 - 裝死大師：杜根
