--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -122,7 +122,7 @@ export_on_save:
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
-- 刺客不忍殺：趙盾、崔琦、蔡邕
+- 刺客不忍殺：趙盾、崔琦、蔡邕、許儒
 - 極限逃生：趙武、蘇武、杜根、第五種、李燮、趙岐、張儉
 - 虐徒事件：黃石公+張良、郭泰+魏昭
 - 易與耳：劇辛+龐煖、龍且+韓信、李廣+胡虜、夏侯淵+韓遂
