更新人物至卷95節3
Former-commit-id: 38d5151a57b51c1be2477609482eefb9c9b3e360

--- a/5_筆記/资治通鉴94.md
+++ b/5_筆記/资治通鉴94.md
@@ -36,6 +36,7 @@ export_on_save:
 
 ## 80509 論功行賞及不罪庾亮
 > 三月，壬子，论平苏峻功->岂非王导乎
+- 王導在蘇峻之亂時已非社稷之臣，而是以家族利益為中心，可為家族犧牲社稷
 
 ## 80510 後趙滅前趙及斬劉胤
 > 徙高密王纮为彭城王->子司繁立
