更新人物至卷95節6，添加乞伏鮮卑、冉魏、翟魏世系
Former-commit-id: 4563f94117ce715820f0c2f9752c095d72ac81c2

--- a/2_世系圖表/2.2_并立政權/晉/十六國/前燕世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/前燕世系圖表.md
@@ -14,7 +14,17 @@ export_on_save:
 ```mermaid
 graph TB
 
+慕容廆-->慕容翰
 慕容廆-->慕容皝
+慕容廆-->慕容仁
+慕容廆-->慕容昭
+慕容廆-->慕容幼
+慕容廆-->慕容稚
+慕容廆-->慕容軍
+慕容廆-->慕容汗
+慕容廆-->慕容評
+慕容廆-->慕容彪
+
 慕容皝-->慕容儁
 慕容儁-->慕容暐
 
