更新人物至卷95節8
Former-commit-id: 101ed8d0f58bbb488e63dee508e01b20a2cb1a49

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -34,7 +34,7 @@ export_on_save:
 - 坑爹：周亞夫子、公孫敬聲、蕭伋、甄尋
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
-- 愚孝：祖己、孫性
+- 愚孝：祖己、孫性、李班
 - 愚忠：王累
 - 摳門：樊伷、曹洪、司馬騰
 - 給君主獻孕婦：呂不韋、春申君
@@ -44,6 +44,7 @@ export_on_save:
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
 - 陽痿：膠西王劉端、司馬保
+- 吮癰舐痔：鄧通、李班
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
@@ -144,4 +145,4 @@ export_on_save:
 - 欒巴：凈身不徹底的宦官，娶妻生子，名列八使
 - 三姓皇后：鄧猛女
 - 減肥困難：王戎子王綏`有美号而太肥，戎令食糠，而肥愈甚也。`
-- 孝感動天與祖己流放曾子挨打；臥冰求鯉與荀令傷神；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶
+- 孝感動天與祖己流放曾子挨打；臥冰求鯉與荀令傷神；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶；親嘗湯藥盛世與李班因孝失國
