--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -120,6 +120,7 @@ export_on_save:
 - 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
 - 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺
+- 女王范兒：郭女王、袁女皇
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
