--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -7,7 +7,7 @@ export_on_save:
 
 - 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇
 - 拒絕稱帝王：季札、公子閭、劉虞
-- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰
+- 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 厭勝制敵：王莽、司馬倫
