更正部分內容
Former-commit-id: 8e17f197cbcefb56ea20337f2a17ce235edf7a29

--- a/5_筆記/资治通鉴96.md
+++ b/5_筆記/资治通鉴96.md
@@ -31,7 +31,7 @@ export_on_save:
 ## 80707 誅段遼及王導郗鑒死
 > 燕前军师慕容评->徐州刺史，假节
 
-## 80708 蔡謨止陳光及晉趙相攻
+## 80708 蔡謨止陳光及後趙破邾城
 > 时左卫将军陈光请伐赵->假節，鎮蕪湖
 
 ## 80709 趙不克燕李壽自大服高句麗
@@ -47,7 +47,7 @@ export_on_save:
 ## 80712 劉翔遊說及策命燕王
 > 春，正月，燕王皝使唐国内史阳裕等筑城于柳城之北->中尉郑林为军谘祭洒
 
-## 80713 慕容恪鎮高句麗及李壽學壞
+## 80713 匈奴劉虎死及李壽學壞
 > 八月，辛酉，东海哀王冲薨->思乱者众矣
 - 高句麗首都被平記録
   - 197年，東漢末遼東公孫度破高句麗，毀國內城
