更新至卷97節3
Former-commit-id: cc753fe841f950c0e75afb780b7ec65bd3df236e

--- a/1_數據表/1.3_各類通表/人物總表字段說明.md
+++ b/1_數據表/1.3_各類通表/人物總表字段說明.md
@@ -30,7 +30,7 @@
 作品|array|各類文學藝術科技作品
 相關成語|array|因人物形成的成語
 人物組合|array|與他人并稱的稱號
-生僻度|int|空-維基百科有此詞條；1-維基百科無，百度有此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度
+生僻度|int|空-維基百科有此詞條；1-維基百科無，百度有此詞條；2-維基、百度均無此詞條，散見其餘字典；3-網絡搜索中基本無此人相關檔案；4-歷史上從未記載過真名，以代稱或另一人關係名出現；5-歷史上從未記載過真名，但其余文獻有詳述，或有一定知名度；6-外文維基百科有此人
 簡述|str|簡要描述此人事跡
 記載年|array|若無生卒得失年，可記錄歷史記載的活躍年份，取可查最早出現的年份
 記載年備註|str|僅用於記載年的相關說明。如有記載年而此處無備注，表示來自通鑑內記載
