--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -72,7 +72,7 @@ export_on_save:
 - 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
-- 反復搖擺：徐龕
+- 反復搖擺：徐龕、王擢
 - 猶豫不決：甘卓
 - 死前暴擊：項羽、段文鴦
 - 強力刺客：公孫述、任尚
