更新至卷98節2
Former-commit-id: c9e225b21988b5f66a9921d17716376397368bab

--- a/2_世系圖表/2.2_并立政權/晉/十六國/後趙世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後趙世系圖表.md
@@ -14,10 +14,18 @@ export_on_save:
 ```mermaid
 graph TB
 
+石周曷朱-->石勒
+
 石勒-->石弘
 石勒--堂侄-->石虎
 
+石周曷朱--存疑-->石寇覓
+石寇覓-->石虎
+
+石虎-->石邃
+石虎-->石宣
 石虎-->石鑒
+石虎-->石韜
 石虎-->石遵
 石虎-->石祗
 石虎-->石世
