更新至卷98節5
Former-commit-id: e86459a34746a22095798d1af9de833d1d3aafd4

--- a/2_世系圖表/2.2_并立政權/晉/十六國/後趙世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後趙世系圖表.md
@@ -9,6 +9,9 @@ export_on_save:
 
 @import "後趙世系表.csv"
 
+- 石勒傳石弘，石虎殺石弘
+- 石虎傳石世，石鑒殺石遵殺石世（羯石三連殺）
+
 ## 世系圖
 
 ```mermaid
@@ -27,11 +30,14 @@ graph TB
 石虎-->石鑒
 石虎-->石韜
 石虎-->石遵
+石虎-->石斌
 石虎-->石祗
 石虎-->石世
 
 石虎--養子-->冉瞻
 冉瞻-->冉閔
+
+石斌-->石衍
 
 classDef king fill:#ffee00
 class 石勒,石弘,石虎,石鑒,石遵,石祗,石世 king
