--- a/2_世系圖表/2.2_并立政權/晉/段部鮮卑世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/段部鮮卑世系圖表.md
@@ -6,13 +6,14 @@ export_on_save:
 # 段部鮮卑世系圖表
 
 ## 世系表
-- 段務勿塵至段遼，為相對正統的遼西公階段
-
 
 @import "段部鮮卑世系表.csv"
 
 ## 世系圖
 
+- 段務勿塵至段遼，為相對正統的遼西公階段
+- 段蘭被石虎復國，後段龕建立段齊
+- 段勤受冉閔影響短暫稱帝
 
 ```mermaid
 graph TB
