--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -72,7 +72,7 @@ export_on_save:
 - 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
-- 反復搖擺：徐龕、王擢
+- 反復搖擺：徐龕、王擢、十六國張平
 - 猶豫不決：甘卓
 - 死前暴擊：項羽、段文鴦
 - 強力刺客：公孫述、任尚
@@ -97,7 +97,7 @@ export_on_save:
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘、王戎
 - 裝醉大師：王允之
-- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師
+- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
@@ -114,6 +114,7 @@ export_on_save:
 - 紅眼：劉曜
 - 重瞳：項羽、呂光、沈約、魚俱羅、朱友孜、北漢劉崇、李煜、卓岩明、明玉珍、顧炎武
 - 三乳：李淵
+- 大頭：苻雄
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲、溫嶠
