--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -5,8 +5,9 @@ export_on_save:
 
 # 奇葩序列
 
-- 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇
+- 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇、蔡謨
 - 拒絕稱帝王：季札、公子閭、劉虞
+- 拒絶出仕：辛謐
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
@@ -76,6 +77,7 @@ export_on_save:
 - 猶豫不決：甘卓
 - 死前暴擊：項羽、段文鴦
 - 強力刺客：公孫述、任尚
+- 神射手：養由基、呂布、賈堅
 - 漢奸：中行説、趙信、衛律、盧芳、漢奸韓琮
 - 媽寶：共叔段、梁王劉武、昭平君
 - 爸寶：州吁
