--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -75,7 +75,7 @@ export_on_save:
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
 - 反復搖擺：徐龕、王擢、十六國張平
 - 猶豫不決：甘卓
-- 死前暴擊：項羽、段文鴦
+- 死前暴擊：項羽、段文鴦、冉閔
 - 強力刺客：公孫述、任尚
 - 神射手：養由基、呂布、賈堅
 - 漢奸：中行説、趙信、衛律、盧芳、漢奸韓琮
