--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -91,7 +91,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
