--- a/2_世系圖表/2.2_并立政權/晉/十六國/前涼世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/前涼世系圖表.md
@@ -11,6 +11,9 @@ export_on_save:
 
 ## 世系圖
 
+- 張祚廢殺張曜靈，被張瓘、宋混除
+- 張瓘立張玄靚，把持朝政，被宋混除
+
 ```mermaid
 graph TB
 
@@ -22,6 +25,7 @@ graph TB
 張駿-->張祚
 張駿-->張重華
 張駿-->張天錫
+張駿-->張瓘
 
 張重華-->張曜靈
 張重華-->張玄靚
