--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -49,7 +49,7 @@ export_on_save:
 - 壁中藏書：孔鮒、伏生、陳寵曾祖陳咸
 - 壁中藏人：梁伯玉、趙歧、袁閎、伏皇后
 - 相面大師：呂公、劉邦、許負、唐舉、朱建平、管輅
-- 感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮、祖逖
+- 感動中國好官：卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪、廉范、劉寵、賈逵、諸葛亮、祖逖、姚襄
 - 舍身為民：魏咎、劉璋
 - 反戰為民：鞠彭
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
@@ -94,12 +94,13 @@ export_on_save:
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃
+- 零食達人：王敦、王安石
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、朱棣
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘、王戎
 - 裝醉大師：王允之
-- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生
+- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、蕭繹、李克用、李自成
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
