更新至卷101節5
Former-commit-id: 1321e5d224822aa15212ceab2e4cbe8be64435bd

--- a/2_世系圖表/2.2_并立政權/晉/十六國/前涼世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/前涼世系圖表.md
@@ -13,6 +13,8 @@ export_on_save:
 
 - 張祚廢殺張曜靈，被張瓘、宋混除
 - 張瓘立張玄靚，把持朝政，被宋混除
+- 宋混死後傳宋澄，宋澄被張邕滅，把持朝政，被張天錫除
+- 張天錫不接受禪讓而弒殺張玄靚
 
 ```mermaid
 graph TB
@@ -34,4 +36,16 @@ graph TB
 
 classDef king fill:#ffee00
 class 張寔,張茂,張駿,張重華,張曜靈,張祚,張玄靚,張天錫 king
+```
+
+- 馬太后通姦圖
+```mermaid
+graph TB
+
+張駿-->張祚
+張駿-->張重華
+馬太后-->張重華
+馬太后--通姦---張祚
+馬太后--通姦---張邕
+
 ```
