--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -8,6 +8,7 @@ export_on_save:
 - 拒絕晉升：申包胥、王蠋、孔霸、劉愷、田疇、蔡謨
 - 拒絕稱帝王：季札、公子閭、劉虞
 - 拒絶出仕：辛謐
+- 拒絶禪讓堅決弒君：石虎、張天錫
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
@@ -80,7 +81,7 @@ export_on_save:
 - 神射手：養由基、呂布、賈堅
 - 漢奸：中行説、趙信、衛律、盧芳、漢奸韓琮
 - 媽寶：共叔段、梁王劉武、昭平君
-- 爸寶：州吁
+- 爸寶：州吁、王坦之
 - 射天罵天：武乙、紂、宋康王、上官安
 - 唯恐天下不亂：漢趙劉靈
 - 愛打小報告：息夫躬、廉昭
@@ -106,7 +107,7 @@ export_on_save:
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
-- 仁義之師：趙充國、漢光武帝
+- 仁義之師：趙充國、漢光武帝、慕容恪
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻
