更新至卷102節3
Former-commit-id: d518aee724d61c52a6b41727743dee000c6205e8

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -103,7 +103,7 @@ export_on_save:
 - 裝醉大師：王允之
 - 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、蕭繹、李克用、李自成
 - 高頻率犯罪：劉賀、劉立
-- 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇
+- 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
