更新至卷102節6
Former-commit-id: d2999aa1387bc7a3ddf08920e08afa32dc00e2cb

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -38,7 +38,7 @@ export_on_save:
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
 - 愚忠：王累
-- 摳門：樊伷、曹洪、司馬騰
+- 摳門：樊伷、曹洪、司馬騰、慕容評
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
 - 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞
@@ -109,6 +109,7 @@ export_on_save:
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
 - 奇葩爵位：羹頡侯劉信、不義侯子密
+- 大預言家：辛憲英、申胤
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻
 - 女智謀家：辛憲英、習英習
