--- a/2_世系圖表/2.2_并立政權/晉/十六國/前燕世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/前燕世系圖表.md
@@ -11,22 +11,22 @@ export_on_save:
 
 ## 世系圖
 
+- 慕容廆奠基、慕容皝開拓、慕容儁稱帝、慕容恪維繫、慕容暐敗家
+
 ```mermaid
 graph TB
 
 慕容廆-->慕容翰
 慕容廆-->慕容皝
 慕容廆-->慕容仁
-慕容廆-->慕容昭
-慕容廆-->慕容幼
-慕容廆-->慕容稚
-慕容廆-->慕容軍
-慕容廆-->慕容汗
 慕容廆-->慕容評
-慕容廆-->慕容彪
 
 慕容皝-->慕容儁
 慕容儁-->慕容暐
+
+慕容皝-->慕容恪
+慕容皝-->慕容垂
+慕容皝-->慕容德
 
 classDef king fill:#ffee00
 class 慕容皝,慕容儁,慕容暐 king
