--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -55,7 +55,7 @@ export_on_save:
 - 反戰為民：鞠彭
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
 - 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範
-- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤
+- 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅
@@ -109,7 +109,7 @@ export_on_save:
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
 - 奇葩爵位：羹頡侯劉信、不義侯子密
-- 大預言家：辛憲英、申胤
+- 大預言家：辛憲英、申胤、黃泓
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻
 - 女智謀家：辛憲英、習英習
