更新至卷103節1
Former-commit-id: 1bd56fc06c36a2adb133bd9d02ec07d1a7e82b37

--- a/5_筆記/资治通鉴102.md
+++ b/5_筆記/资治通鉴102.md
@@ -19,10 +19,10 @@ export_on_save:
 > 燕主暐遣大鸿胪温统拜袁真使持节->绍，胤之子也
 
 ## 81304 前燕亂政不備前秦
-> 秦留梁琛月馀->疏奏，不省
+> 秦留梁琛月馀->以溫世子熙為豫州刺史、假節
 
 ## 81305 前秦出兵及王猛反間慕容垂
-> 辛丑，丞相昱与大司马温会涂中->岂雅德君子所宜为哉
+> 初，燕人許割虎牢以西賂秦->岂雅德君子所宜为哉
 
 ## 81306 前秦滅前燕之戰
 > 乐安王臧进屯荥阳->與之更始
