更新至卷103節6
Former-commit-id: 0925935b1ca204d18876eb303eec04f340382f77

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -101,7 +101,8 @@ export_on_save:
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘、王戎
 - 裝醉大師：王允之
-- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、蕭繹、李克用、李自成
+- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、蕭繹、李克用、李自成
+- 黑皮: 李陵容
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真
 - 殺子：石碏、金日磾、漢成帝、王立、王莽
