--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -112,7 +112,7 @@ export_on_save:
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 大預言家：辛憲英、申胤、黃泓
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
-- 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻
+- 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母
 - 女智謀家：辛憲英、習英習
 - 誓不改嫁：夏侯令女
 - 女權主義者∶程咸
