更新至卷105節3
Former-commit-id: 464510d4818c7a6606c5999577b7ec4e66ff2bc2

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -29,7 +29,7 @@ export_on_save:
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠
 - 食餅毒死：漢質帝、晉惠帝
-- 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘
+- 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 清醒子女：胡毋謙之、張韙
@@ -88,7 +88,7 @@ export_on_save:
 - 暴露狂：桑扈、上官安、劉伶、張滿
 - 飆車愛好者：劉賀
 - cosplay愛好者：濟東王劉彭離、漢靈帝
-- 女裝大佬：曹叡、何晏
+- 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
