--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -18,7 +18,7 @@ export_on_save:
 - 虐待動物：田單、楊琁
 - 招貓遞狗君王：無彊、宋康王、齊湣王
 - 餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫、楊喬、得來、楊芷
-- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜
+- 氣死：申屠嘉、王商、梁女瑩、朱穆、朱儁、陸遜、羊琇、向雄、晉元帝、王遜、桓沖
 - 吐哺：周公、郗鑒
 - 死於廁所：晉景公、韓馥
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
