--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -58,7 +58,7 @@ export_on_save:
 - 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春
-- 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅、釋道安
+- 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁胤、管輅、釋道安、王嘉
 - 矬：周舉、張松、朱然、宋配
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
