--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -68,6 +68,7 @@ export_on_save:
 - 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑
 - 牧羊：楚義帝、卜式、路溫舒、劉盆子
 - 牧牛：鄧艾
+- 賣鞋：劉備、慕容永
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進
 - 屠夫家皇后：何皇后、謝玖
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
@@ -90,7 +91,7 @@ export_on_save:
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、唐伯虎
-- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生
+- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生
 - 屠伯：嚴延年、苟晞
