更新至卷106節11
Former-commit-id: 0025b4bf6b29f07f9ef7a478b9b2453586103b7b

--- a/2_世系圖表/2.2_并立政權/晉/十六國/前涼世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/前涼世系圖表.md
@@ -15,6 +15,7 @@ export_on_save:
 - 張瓘立張玄靚，把持朝政，被宋混除
 - 宋混死後傳宋澄，宋澄被張邕滅，把持朝政，被張天錫除
 - 張天錫不接受禪讓而弒殺張玄靚
+- 386年張大豫被推，自立為涼州牧，與呂光爭鋒不敵，387年被斬
 
 ```mermaid
 graph TB
