--- a/2_世系圖表/2.2_并立政權/晉/西燕世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/西燕世系圖表.md
@@ -12,11 +12,15 @@ export_on_save:
 ## 世系圖
 
 - 淝水之戰后慕容泓為復興燕國的分支，稱濟北王
-- 高蓋殺慕容泓立慕容沖，慕容沖稱帝，定都阿房
-- 段隨殺慕容沖，慕容永等策劃殺段隨立慕容顗
-- 慕容顗被其弟殺，立慕容瑤
-- 慕容永殺慕容瑤立慕容忠
-- 慕容忠被部下殺，慕容永稱帝於長子，被後燕滅
+- 384年，高蓋殺慕容泓立慕容沖
+- 慕容沖稱帝，定都阿房，後攻破長安，趕走前男友苻堅
+- 386年五連殺
+    - 慕容沖搞經濟不復國，韓延殺慕容沖(X1)，立段隨
+    - 慕容恆慕容永殺段隨(X2)，立慕容顗，去長安東行
+    - 慕容韜殺慕容顗(X3)，慕容恆立慕容瑤
+    - 群眾皆奔慕容永，慕容永殺慕容瑤(X4)，立慕容忠
+    - 刁雲殺慕容忠(X5)，推舉慕容永
+- 慕容永擊敗苻丕，稱帝於長子，被後燕滅
 
 ```mermaid
 graph TB
