--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -116,7 +116,8 @@ export_on_save:
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母
 - 女智謀家：辛憲英、習英習
-- 誓不改嫁：夏侯令女
+- 女刺客：女艾、前秦楊皇后
+- 誓不改嫁：夏侯令女、前秦楊皇后
 - 女權主義者∶程咸
 - 白眉：劉曜
 - 紅眼：劉曜
