更新至卷107節3
Former-commit-id: a79459880cae054d49e284e34fc3bb2dc578031d

--- a/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.md
@@ -32,6 +32,9 @@ graph TB
 
 翟遼-->翟釗
 
+classDef dingling fill:#87CEEB
+class 翟斌,翟真,翟成 dingling
+
 classDef king fill:#EEEE00
-class 翟斌,翟真,翟成,翟遼,翟釗 king
+class 翟遼,翟釗 king
 ```
