更新至卷107節8，合併乞伏鮮卑至西秦世系
Former-commit-id: b98e3a75c7a3e619ca90996f9fa774f377986814

--- a/2_世系圖表/2.2_并立政權/晉/十六國/西秦世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/西秦世系圖表.md
@@ -11,8 +11,6 @@ export_on_save:
 
 ## 世系圖
 
-- 前身為[乞伏鮮卑](2_世系圖表/2.2_并立政權/晉/乞伏鮮卑世系圖表.html)
-
 ```mermaid
 graph TB
 
@@ -23,4 +21,29 @@ graph TB
 
 classDef king fill:#ffee00
 class 乞伏國仁,乞伏乾歸,乞伏熾磐,乞伏暮末 king
+```
+
+- 前身乞伏鮮卑世系圖
+
+```mermaid
+graph TB
+
+乞伏如弗--養子-->乞伏紇干
+乞伏紇干--後代-->乞伏祐鄰
+乞伏祐鄰-->乞伏結權
+
+乞伏結權-->乞伏利那
+乞伏結權-->乞伏祁埿
+乞伏結權-->乞伏軻埿
+
+乞伏利那-->乞伏述延
+
+乞伏祁埿-->乞伏傉大寒
+乞伏祁埿-->乞伏吐雷
+
+乞伏傉大寒-->乞伏司繁
+乞伏傉大寒-->乞伏步頹
+
+classDef king fill:#EEEE00
+class 乞伏紇干,乞伏祐鄰,乞伏結權,乞伏利那,乞伏祁埿,乞伏述延,乞伏傉大寒,乞伏司繁 king
 ```
