--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -73,7 +73,7 @@ export_on_save:
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進
 - 屠夫家皇后：何皇后、謝玖
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
-- 刻苦讀書：朱買臣、兒寬、路溫舒、匡衡
+- 刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
 - 反復搖擺：徐龕、王擢、十六國張平
@@ -114,7 +114,7 @@ export_on_save:
 - 奇葩爵位：羹頡侯劉信、不義侯子密
 - 大預言家：辛憲英、申胤、黃泓
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
-- 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母
+- 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后
 - 女智謀家：辛憲英、習英習
 - 女刺客：女艾、前秦楊皇后
 - 誓不改嫁：夏侯令女、前秦楊皇后
