--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -103,7 +103,7 @@ export_on_save:
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘、王戎
 - 裝醉大師：王允之
-- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、蕭繹、李克用、李自成
+- 獨眼龍：杜欽、夏侯惇、丁儀、司馬師、苻生、房曠、殷仲堪、蕭繹、李克用、李自成
 - 黑皮: 李陵容
 - 高頻率犯罪：劉賀、劉立
 - 背鍋俠：夏侯藩、魯匡、成濟、馮斐、邵疇、袁真
@@ -130,7 +130,7 @@ export_on_save:
 - 萬人迷：黃憲、溫嶠
 - 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
-- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃
+- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗
 - 女王范兒：郭女王、袁女皇
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 自築小屋：袁閎、申屠蟠
@@ -149,6 +149,7 @@ export_on_save:
 - 恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健
 - 鞭屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅
 - 被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)
+- 農夫與蛇：苻堅+姚萇、沒奕干+赫連勃勃
 
 # 雜說
 
@@ -160,4 +161,4 @@ export_on_save:
 - 欒巴：凈身不徹底的宦官，娶妻生子，名列八使
 - 三姓皇后：鄧猛女
 - 減肥困難：王戎子王綏`有美号而太肥，戎令食糠，而肥愈甚也。`
-- 孝感動天與祖己流放曾子挨打；臥冰求鯉與荀令傷神；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶；親嘗湯藥盛世與李班因孝失國
+- 孝感動天與祖己流放曾子挨打；哭竹生筍與子夏失明；扼虎救父與李逵背母；乳姑不怠與張蒼喝奶；親嘗湯藥盛世與李班因孝失國
