--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -149,7 +149,7 @@ export_on_save:
 - 恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健
 - 鞭屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅
 - 被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)
-- 農夫與蛇：苻堅+姚萇、沒奕干+赫連勃勃
+- 農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃
 
 # 雜說
 
