更新至卷108節6
Former-commit-id: 8a8d19e477067c40017a666799b8960356acbd8d

--- a/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/翟魏世系圖表.md
@@ -3,8 +3,11 @@ export_on_save:
     html: true
 ---
 
+# 翟魏世系圖表
+
 - 傳位圖
     - 日常性反復無常，388年慕容垂怒斬翟遼使者，翟遼索性自立門戶，自稱魏天王
+    - 翟釗被東晉、後燕攻，投奔西燕謀反被誅
 
 
 ```mermaid
