更新至卷108節10
Former-commit-id: 9df01e7a2b3ac1f559f9136abf48879a36761ff4

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -14,6 +14,7 @@ export_on_save:
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
 - 厭勝制敵：王莽、司馬倫
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安
+- 成功踏冰：劉秀、慕容皝、魏道武帝
 - 酷刑倖存者：尉古真
 - 虐待士卒：霍去病、李廣利、張飛
 - 虐待動物：田單、楊琁
