--- a/2_世系圖表/2.2_并立政權/晉/拓跋鮮卑-拓跋代世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/拓跋鮮卑-拓跋代世系圖表.md
@@ -14,40 +14,48 @@ export_on_save:
 ## 世系圖
 
 - 拓跋祿官分國三部，東中西分別用紅黃緑三色區分。拓跋猗盧之後統一建立拓跋代，仍沿用緑色
+- 禿髮匹孤分化為河西鮮卑，為南涼的始祖
 
 ```mermaid
 graph TB
+subgraph 追尊時期
+    拓跋毛--六代-->拓跋推寅
+    拓跋推寅--七代-->拓跋鄰
+    拓跋鄰-->拓跋詰汾
+    拓跋詰汾-->禿髮匹孤
+    拓跋詰汾-->拓跋力微
+end
 
-拓跋毛--六代-->拓跋推寅
-拓跋推寅--七代-->拓跋鄰
-拓跋鄰-->拓跋詰汾
-拓跋詰汾-->秃發匹孤
-拓跋詰汾-->拓跋力微
+subgraph 拓跋鮮卑
+    拓跋力微-->拓跋沙漠汗
+    拓跋力微-->拓跋悉鹿
+    拓跋力微-->拓跋綽
+    拓跋力微-->拓跋祿官
+end
 
-拓跋力微-->拓跋沙漠汗
-拓跋力微-->拓跋悉鹿
-拓跋力微-->拓跋綽
-拓跋力微-->拓跋祿官
+subgraph 拓跋代
+    拓跋沙漠汗-->拓跋弗
+    拓跋沙漠汗-->拓跋猗㐌
+    拓跋沙漠汗-->拓跋猗盧
 
-拓跋沙漠汗-->拓跋弗
-拓跋沙漠汗-->拓跋猗㐌
-拓跋沙漠汗-->拓跋猗盧
+    拓跋弗-->拓跋鬱律
 
-拓跋弗-->拓跋鬱律
+    拓跋猗㐌-->拓跋普根
+    拓跋猗㐌-->拓跋賀傉
+    拓跋猗㐌-->拓跋紇那
 
-拓跋猗㐌-->拓跋普根
-拓跋猗㐌-->拓跋賀傉
-拓跋猗㐌-->拓跋紇那
+    拓跋猗盧-->拓跋六修
+    拓跋猗盧-->拓跋比延
 
-拓跋猗盧-->拓跋六修
-拓跋猗盧-->拓跋比延
+    拓跋鬱律-->拓跋翳槐
+    拓跋鬱律-->拓跋什翼犍
 
-拓跋鬱律-->拓跋翳槐
-拓跋鬱律-->拓跋什翼犍
+    拓跋普根-->拓跋普根之子
 
-拓跋普根-->拓跋普根之子
+    拓跋什翼犍-->拓跋寔
+end
 
-拓跋什翼犍-->拓跋寔
+拓跋寔-->魏道武帝
 
 classDef tuoba fill:#87CEEB
 class 拓跋力微,拓跋悉鹿,拓跋綽,拓跋弗 tuoba
