更新至卷109節6
Former-commit-id: 84bb6f824e7ee12547ada87216c8bb62c0b05fe3

--- a/2_世系圖表/2.2_并立政權/晉/十六國/後燕世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後燕世系圖表.md
@@ -11,21 +11,34 @@ export_on_save:
 
 ## 世系圖
 
+- 慕容垂逃離苻堅開基，傳給慕容寶半殘
+- 經參合陂之戰、柏肆之戰，慕容寶棄都中山
+    - 慕容詳來不及逃跑，在中山稱帝，迅速被慕容麟做掉，又被北魏滅
+- 高句麗人高雲助慕容寶破慕容會叛亂，被收為養子
+- 慕容寶被舅姥爺蘭汗幹掉，他兒子慕容盛又迅速幹掉老舅姥爺兼老丈人蘭汗
+
 ```mermaid
 graph TB
 
 慕容皝-->慕容垂
 蘭淑儀-->慕容垂
 
+蘭淑儀父-->蘭淑儀
+蘭淑儀父-->蘭汗
+
+慕容垂-->慕容農
+
 慕容垂-->慕容寶
 慕容寶-->慕容盛
 慕容寶--收養-->高雲
 
+慕容垂-->慕容隆
+慕容垂-->慕容麟
+
 慕容垂-->慕容熙
 
-蘭淑儀父-->蘭淑儀
-蘭淑儀父-->蘭汗
+慕容皝-->慕容詳祖父-->慕容詳父-->慕容詳
 
 classDef king fill:#ffee00
-class 慕容垂,慕容寶,蘭汗,慕容盛,慕容熙,高雲 king
+class 慕容垂,慕容寶,慕容詳,慕容麟,蘭汗,慕容盛,慕容熙 king
 ```
