更新至卷109節8，添加北涼世系
Former-commit-id: fd15e040780de71de7cdf97314ee370ce33b2670

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -148,7 +148,7 @@ export_on_save:
 - 相愛相殺：張耳+陳餘、孫權+張昭、司馬顒+劉沈、劉聰+劉乂、劉琨+段匹磾、苻堅+慕容沖
 - 替身：劉邦+紀信、祖約+閻秃
 - 恥做乾兒子：秦始皇+嫪毐、張綉+曹操、張遇+苻健
-- 鞭屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅
+- 鞭屍戳屍：齊懿公+邴原、伍子胥+楚平王、蘇不韋+李阜、姚萇+苻堅、魏道武帝+慕容詳
 - 被打鷄血：石遵+冉閔(努力！事成，以爾為儲貳)、朱棣+朱高煦(勉之！世子多疾)
 - 農夫與蛇：苻堅+姚萇、滕恬之+翟遼、沒奕干+赫連勃勃
 
