--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -39,7 +39,7 @@ export_on_save:
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
-- 愚忠：王累
+- 愚忠：弘演、王累
 - 摳門：樊伷、曹洪、司馬騰、慕容評
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
@@ -97,7 +97,7 @@ export_on_save:
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生
 - 屠伯：嚴延年、苟晞
-- 食人魔：程昱、張方、石邃、石虎、苻登
+- 食人魔：程昱、張方、石邃、石虎、苻登、郭黁
 - 零食達人：王敦、王安石
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
 - 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、朱棣
@@ -113,7 +113,7 @@ export_on_save:
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
 - 奇葩爵位：羹頡侯劉信、不義侯子密
-- 大預言家：辛憲英、申胤、黃泓
+- 大預言家：辛憲英、申胤、黃泓、郭黁
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后
 - 女智謀家：辛憲英、習英習
