--- a/5_筆記/资治通鉴108.md
+++ b/5_筆記/资治通鉴108.md
@@ -55,7 +55,7 @@ export_on_save:
 慕容德|段季妃|南燕||段儀女
 慕容納|段太后|南燕|慕容超|
 
-## 81911 呂光稱王北魏稱帝魏取幷州
+## 81911 呂光稱王及北魏取幷州
 > 三河王呂光即天王位->悉以委麟
 
 ## 81912 張貴人弒君及王恭國寶內鬥
