--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -77,7 +77,7 @@ export_on_save:
 - 刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
-- 反復搖擺：徐龕、王擢、十六國張平
+- 反復搖擺：徐龕、王擢、十六國張平、李辯
 - 猶豫不決：甘卓
 - 死前暴擊：項羽、段文鴦、冉閔
 - 強力刺客：公孫述、任尚
