更新至卷111節8
Former-commit-id: d0368deb80681585687c9f0c36ae110aff23f22a

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -40,7 +40,7 @@ export_on_save:
 - 救父：緹縈、馮緄
 - 被後媽虐：祖己、薛苞、蔣詡、李曇、王祥
 - 愚孝：祖己、孫性、李班
-- 愚忠：弘演、王累
+- 愚忠：弘演、王累、羅企生
 - 摳門：樊伷、曹洪、司馬騰、慕容評
 - 給君主獻孕婦：呂不韋、春申君
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
@@ -71,7 +71,7 @@ export_on_save:
 - 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑
 - 牧羊：楚義帝、卜式、路溫舒、劉盆子
 - 牧牛：鄧艾
-- 賣鞋：劉備、慕容永
+- 賣鞋：劉備、慕容永、劉裕
 - 屠夫出身：姜子牙、聶政、樊噲、朱亥、何進
 - 屠夫家皇后：何皇后、謝玖
 - 力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥
