--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -96,7 +96,7 @@ export_on_save:
 - 娘砲：李固、曹植、何晏、唐伯虎
 - 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
-- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生
+- 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆
 - 屠伯：嚴延年、苟晞
 - 食人魔：程昱、張方、石邃、石虎、苻登、郭黁
 - 零食達人：王敦、王安石
@@ -113,7 +113,7 @@ export_on_save:
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
-- 奇葩爵位：羹頡侯劉信、不義侯子密
+- 奇葩爵位：羹頡侯劉信、不義侯子密、思悔侯段璣
 - 大預言家：辛憲英、申胤、黃泓、郭黁
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞
