--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -46,6 +46,7 @@ export_on_save:
 - 龍陽君主：衛靈公、魏安釐王、劉邦、漢惠帝、漢文帝、漢景帝、漢武帝、漢成帝、漢哀帝、曹叡
 - 口吃：韓非、周昌、司馬相如、揚雄、鄧艾、曹叡、馬鈞
 - 狐臭：楚懷王
+- 脫髮: 王莽、曹丕
 - 消渴(糖尿病)：司馬相如
 - 羸瘵(肺結核)：賀循
 - 陽痿：膠西王劉端、司馬保
@@ -119,7 +120,7 @@ export_on_save:
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞
 - 女智謀家：辛憲英、習英習
 - 女刺客：女艾、前秦楊皇后、張貴人
-- 誓不改嫁：夏侯令女、前秦楊皇后
+- 誓不改嫁：夏侯令女、前秦楊皇后、呂纂楊皇后
 - 女權主義者∶程咸
 - 白眉：劉曜
 - 紅眼：劉曜
