更新至卷113節7
Former-commit-id: d9bc2de7b041d621cb50befb7701897e5acf912c

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -12,7 +12,7 @@ export_on_save:
 - 後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、曹叡、司馬炎、劉聰、石虎
 - 烹子食子：易牙、樂羊
 - 人力大牛：翟璜、暴勝之、鄧騭、陳忠、王龔、曹騰、荀彧、司馬徽、山濤、王導
-- 妖術制敵：王莽、司馬倫、王凝之
+- 妖術厭勝制敵：王莽、司馬倫、王凝之、桓溫
 - 愛兵如子：吳起、李廣、衛青、祭遵、段熲、皇甫嵩、陳安
 - 成功踏冰：劉秀、慕容皝、魏道武帝
 - 酷刑倖存者：尉古真
@@ -128,6 +128,7 @@ export_on_save:
 - 三乳：李淵
 - 大頭：苻雄
 - 豁牙：慕容垂
+- 兔唇: 魏詠之
 - 巨人：阮翁仲、巨毋霸
 - 魔術師：黎軒善眩人、海西幻人
 - 萬人迷：黃憲、溫嶠
