更新至卷113節11
Former-commit-id: e8560f70bb52badb47baef4294087a3e10da7095

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -26,7 +26,7 @@ export_on_save:
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
 - 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸
 - 疽發背死：范增、劉焉、曹休
-- 自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之
+- 自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠
 - 食餅毒死：漢質帝、晉惠帝
@@ -67,7 +67,7 @@ export_on_save:
 - 矬：周舉、張松、朱然、宋配
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
-- 名廚：伊尹、易牙
+- 名廚：伊尹、易牙、毛修之
 - 狗監：楊得意
 - 牧豬：公孫弘、吳祐、公沙穆
 - 弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子、汲桑
