--- a/2_世系圖表/2.2_并立政權/晉/十六國/後涼世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後涼世系圖表.md
@@ -13,7 +13,8 @@ export_on_save:
 
 - 苻堅髮小呂婆樓之子呂光，淝水之戰前征西域，回來苻堅已死，類似趙佗，但鳩摩羅什勸他別扎根西域
 - 386年呂光入涼州自稱涼州牧、酒泉公，389年稱三河王，396年稱大涼天王
-
+- 呂光死後，呂紹即位速被呂纂殺
+- 呂纂被呂超殺，推立呂隆控制不住南北西三涼，降後秦
 
 ```mermaid
 graph TB
@@ -25,6 +26,7 @@ graph TB
 呂光-->呂紹
 
 呂寶-->呂隆
+呂寶-->呂超
 
 classDef king fill:#ffee00
 class 呂光,呂紹,呂纂,呂隆 king
