--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -115,7 +115,7 @@ export_on_save:
 - 殺兄入嫂：齊桓公、李世民
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
-- 奇葩爵位：羹頡侯劉信、不義侯子密、思悔侯段璣
+- 奇葩爵位：羹頡侯劉信、不義侯子密、思悔侯段璣、醜侯吳質
 - 大預言家：辛憲英、申胤、黃泓、郭黁
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞
