--- a/2_世系圖表/2.1_帝王/魏晉/晉朝世系圖.md
+++ b/2_世系圖表/2.1_帝王/魏晉/晉朝世系圖.md
@@ -70,7 +70,7 @@ graph TB
 
 - 桓玄逼晉安帝禪讓(403)
     - 劉裕攻破桓玄，晉安帝短暫復位(404)
-    - 桓振又迅速挾持晉安帝(404)
+    - 桓振又迅速挾持晉安帝(404)，復被破(405)
 
 ```mermaid
 graph TB
@@ -95,5 +95,5 @@ classDef control fill:#ccffff
 class 桓溫 control
 
 classDef battle fill:#ffeeee
-class 桓謙,桓振,桓石綏 battle
+class 桓振 battle
 ```
