更新至卷114節6
Former-commit-id: 55592434c3fac13ef991778c014e3ec3226401ce

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -103,7 +103,7 @@ export_on_save:
 - 食人魔：程昱、張方、石邃、石虎、苻登、郭黁
 - 零食達人：王敦、王安石
 - 盜墓達人：劉去、曹操、呂布、溫韜、劉豫、楊璉真迦、陳奉、乾隆、孫殿英
-- 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、朱棣
+- 裝瘋大師：箕子、孫臏、蒯徹、韋玄成、賀循、慕容翰、慕容超、朱棣
 - 裝死大師：杜根
 - 裝病大師：司馬懿、衛瓘、王戎
 - 裝醉大師：王允之
