更新至卷114節10，添加北燕世系
Former-commit-id: 2a9b5580859eaaed4a6552ace70fad6b1798a311

--- a/2_世系圖表/2.2_并立政權/晉/十六國/後燕世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後燕世系圖表.md
@@ -16,6 +16,7 @@ export_on_save:
     - 慕容詳來不及逃跑，在中山稱帝，迅速被慕容麟做掉，又被北魏滅
 - 高句麗人高雲助慕容寶破慕容會叛亂，被收為養子
 - 慕容寶被舅姥爺蘭汗幹掉，他兒子慕容盛又迅速幹掉老舅姥爺兼老丈人蘭汗
+- 慕容熙寵愛二苻滅國，馮跋推高雲建立北燕
 
 ```mermaid
 graph TB
