--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -25,7 +25,7 @@ export_on_save:
 - 死於廁所：晉景公、韓馥
 - 哭死哭瞎：子夏、張放、孝睦皇后、趙戩
 - 嘔血死：周亞夫、王嘉、祭肜、馬日磾、袁術、袁紹、司馬攸
-- 疽發背死：范增、劉焉、曹休
+- 疽發背死：范增、劉焉、曹休、庾悅
 - 自焚燒死：魏咎、涉間、孝平王皇后、司馬乂、王獻之、後燕王榮
 - 赴戰陣殉難：關靖、于詮、諸葛尚
 - 跳樓：揚雄、緑珠
@@ -143,6 +143,7 @@ export_on_save:
 - 被姦尸：呂后、漢桓帝馮貴人、苻訓英
 - 心動救駕：金日磾、許褚、叔孫俊
 - 自戀狂：何晏
+- 睚眥必報：劉毅
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
 - 兄弟三人同床：姜肱+姜仲海+姜季江、劉備+關羽+張飛
 - 刺客不忍殺：趙盾、崔琦、蔡邕、許儒、李勢妹、姚襄
