更新至卷116節8，更新林邑國世系
Former-commit-id: 4293f1ad590ce665e599a4fb0acab7f8cd4467b3

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -135,7 +135,7 @@ export_on_save:
 - 萬人迷：黃憲、溫嶠
 - 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
-- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗
+- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥
 - 女王范兒：郭女王、袁女皇
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 自築小屋：袁閎、申屠蟠
