--- a/2_世系圖表/2.2_并立政權/晉/林邑國世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/林邑國世系圖表.md
@@ -3,34 +3,54 @@ export_on_save:
     html: true
 ---
 
+- 占族人在越南中部建立占婆國
+    - 林邑時期 137-757：從東漢開始，建立前四個王朝，成為林邑王國
+    - 占城時期 758-1832：唐朝中期，改名環王，成為占城國。一直延續至清朝，被越南兼併。
+    - 早期信奉婆羅門教，13世紀部分改信伊斯蘭教
 - 林邑王國（占婆第一王朝至第四王朝），192-757
+    - 第一王朝：137-336，區連獨立自東漢，至東晉范逸死
+    - 第二王朝：336-420，范文奪位，其中范胡達較強盛，至晉亡之年范文敵被殺
+    - 第三王朝：420-六世紀前半葉，范陽邁一世建國，至南朝梁陳間范弼毳跋摩
+    - 第四王朝：六世紀前半葉-757，高式律陀羅跋摩建立第四王朝，至唐朝律陀羅跋摩二世，改國號為環王
 
 - 傳位圖
 ```mermaid
 graph TB
 
-區連--數代後的外孫-->范熊
-范熊-->范逸
-范逸--諸子被殺-->范文
-范文-->范佛
-范佛-->范胡達
-范胡達-->范敵真
-范敵真--外甥-->范文敵
-范文敵--關係不明-->范陽邁一世
-范陽邁一世-->范陽邁二世
-范陽邁二世-->范神成
-范神成--關係不明-->范當根純
-范當根純--被討滅-->范諸農
-范諸農-->范文款
-范文款-->范天凱
-范天凱-->范弼毳跋摩
-范弼毳跋摩--關係不明-->高式律陀羅跋摩
-高式律陀羅跋摩--關係不明-->范梵志
-范梵志--關係不明-->范頭黎
-范頭黎-->范鎮龍
-范鎮龍--范頭黎外孫-->拔陀羅首羅跋摩
-拔陀羅首羅跋摩--女王夫-->諸葛地
-諸葛地-->毗建陀跋摩二世
-毗建陀跋摩二世--關係不明-->律陀羅跋摩二世
+subgraph 第一王朝
+    區連--數代後的外孫-->范熊
+    范熊-->范逸
+end
+
+subgraph 第二王朝
+    范逸--諸子被殺-->范文
+    范文-->范佛
+    范佛-->范胡達
+    范胡達-->范敵真
+    范敵真--外甥-->范文敵
+end
+
+subgraph 第三王朝
+    范文敵--關係不明-->范陽邁一世
+    范陽邁一世-->范陽邁二世
+    范陽邁二世-->范神成
+    范神成--關係不明-->范當根純
+    范當根純--被討滅-->范諸農
+    范諸農-->范文款
+    范文款-->范天凱
+    范天凱-->范弼毳跋摩
+end
+
+subgraph 第四王朝
+    范弼毳跋摩--關係不明-->高式律陀羅跋摩
+    高式律陀羅跋摩--關係不明-->范梵志
+    范梵志--關係不明-->范頭黎
+    范頭黎-->范鎮龍
+    范鎮龍--范頭黎外孫-->拔陀羅首羅跋摩
+    拔陀羅首羅跋摩--大亂立女王-->伊薩那跋摩
+    伊薩那跋摩--女王下嫁-->諸葛地
+    諸葛地-->毗建陀跋摩二世
+    毗建陀跋摩二世--關係不明-->律陀羅跋摩二世
+end
 
 ```
