更新至卷117節3
Former-commit-id: a4ba780990ffe4da6d07b025ab2064717089660b

--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -81,7 +81,7 @@ export_on_save:
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
 - 反復搖擺：徐龕、王擢、十六國張平、李辯
-- 出使持節：蘇武、于什門
+- 出使持節：蘇武、于什門、隗仁
 - 猶豫不決：甘卓、劉牢之
 - 死前暴擊：項羽、段文鴦、冉閔
 - 強力刺客：公孫述、任尚
