--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -117,7 +117,7 @@ export_on_save:
 - 狗屎運：王興、王盛、黃耇、吳平
 - 仁義之師：趙充國、漢光武帝、慕容恪
 - 奇葩爵位：羹頡侯劉信、不義侯子密、思悔侯段璣、醜侯吳質
-- 大預言家：辛憲英、申胤、黃泓、郭黁
+- 大預言家：辛憲英、申胤、黃泓、郭黁、崔浩
 - 女反賊：呂母、遲昭平、徵側、徵貳、陳碩真
 - 女戰士：孫夫人、羅皇太后、李秀、荀灌、劉遐妻、朱序母、前秦毛皇后、謝道韞
 - 女智謀家：辛憲英、習英習
@@ -144,6 +144,7 @@ export_on_save:
 - 自築小屋：袁閎、申屠蟠
 - 商界精英：呂不韋、孟佗
 - 心動救駕：金日磾、許褚、叔孫俊
+- 吸毒誤國：魏道武帝、姚興
 - 自戀狂：何晏
 - 睚眥必報：劉毅
 - 三人三對：衛靈公+彌子瑕+南子、漢哀帝+董賢+董賢妻(+董昭儀)、梁冀+孫壽+秦宮
