更新至卷117節6

--- a/2_世系圖表/2.2_并立政權/晉/十六國/後涼世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後涼世系圖表.md
@@ -15,6 +15,7 @@ export_on_save:
 - 386年呂光入涼州自稱涼州牧、酒泉公，389年稱三河王，396年稱大涼天王
 - 呂光死後，呂紹即位速被呂纂殺
 - 呂纂被呂超殺，推立呂隆控制不住南北西三涼，降後秦
+    - 姚興死時呂隆、呂超參與造反失敗，被姚泓誅
 
 ```mermaid
 graph TB
