--- a/3_專項研究/3.2_通用/奇葩序列.md
+++ b/3_專項研究/3.2_通用/奇葩序列.md
@@ -33,6 +33,7 @@ export_on_save:
 - 被鬼怪嚇死：呂后、司馬懿、阮瞻、漢趙劉娥、姚萇、唐肅宗
 - 醉死：劉曜、禿髪烏孤
 - 智謀小人物：貫珠者、趙養卒、宣曲任氏、虎圈嗇夫、周丘、食苻堅淮北民
+- 忠臣食盡：荀彧、劉穆之
 - 智慧的父母：吳起卒母、陳嬰母、王陵之母、張湯之母、王光母、范滂母、趙苞母、李義、王經母、潘岳母、劉琨母
 - 絕望的父母：趙將括母、晁錯父、陳勝妻父、趙長年、嚴延年母、張俶父
 - 清醒子女：胡毋謙之、張韙
@@ -59,12 +60,13 @@ export_on_save:
 - 舍身為民：魏咎、劉璋
 - 反戰為民：鞠彭
 - 嘴賤：韓生、栗姬、彌衡、楊修、魏明帝虞妃
-- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆
+- 站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐、沮授、鄭度、曹爽參軍楊偉、桓範、徐道覆、後秦趙玄
 - 長壽：趙佗、張蒼、伏生、許敬、士燮、高柔、張臶、呂岱、來敏、拓跋力微、范長生、劉寔、禿髪椎斤、黃泓、西燕李先、薛強
 - 苦逼一生：酈寄、申屠嘉、孝睦皇后、馮衍、呂安、宣穆皇后
 - 二婚皇后：薄姬、孝景王皇后、甄夫人、蜀漢吳皇后、羊獻容、劉聰小劉貴人、鄭阿春、賀夫人
 - 醜：楚穆王、孟嘗君、蔡澤、田蚡、周舉、周燮、梁冀子梁胤、管輅、釋道安、王嘉
 - 矬：周舉、張松、朱然、宋配
+- 慫：韓馥、尉建
 - 野獸搏鬥者：轅固、賈夫人、馮婕妤、孫禮、楊香
 - 被污早年失德：陳平、直不疑、第五倫
 - 名廚：伊尹、易牙、毛修之
@@ -80,7 +82,7 @@ export_on_save:
 - 刻苦讀書：蘇秦(刺股)、朱買臣(負薪)、兒寬、路溫舒、東漢孫敬(懸樑)、匡衡(鑿壁偷光)、車胤(囊螢)、晉朝孫康(映雪)、李密(掛角)
 - 神童：項橐、甘羅、孔融、曹沖、周不疑
 - 常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆
-- 反復搖擺：徐龕、王擢、十六國張平、李辯
+- 反復搖擺：徐龕、王擢、十六國張平、李辯、韋華
 - 出使持節：蘇武、于什門、隗仁
 - 猶豫不決：甘卓、劉牢之
 - 死前暴擊：項羽、段文鴦、冉閔
@@ -97,7 +99,7 @@ export_on_save:
 - cosplay愛好者：濟東王劉彭離、漢靈帝
 - 女裝大佬：曹叡、何晏、王國寶
 - 娘砲：李固、曹植、何晏、唐伯虎
-- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、魯女生、小野妹子
+- 僞娘姓名：女防、馮婦、戰國徐夫人、西漢丁夫人、庫傉官女生、魯女生、小野妹子
 - 著名司機：造父、東野畢、王良、韓哀、羊斟、曹參、衛綰
 - 變態殺人狂：劉建、劉去、董卓、孫皓、石邃、石虎、苻生、庾恆
 - 屠伯：嚴延年、苟晞
@@ -123,7 +125,7 @@ export_on_save:
 - 女智謀家：辛憲英、習英習
 - 女刺客：女艾、前秦楊皇后、張貴人
 - 誓不改嫁：夏侯令女、前秦楊皇后、呂纂楊皇后
-- 女權主義者∶程咸
+- 女權主義者：程咸
 - 被姦尸：呂后、漢桓帝馮貴人、苻訓英
 - 群姦亂國：夏姬、叱洛侯少妻
 - 白眉：劉曜
@@ -138,7 +140,7 @@ export_on_save:
 - 萬人迷：黃憲、溫嶠
 - 死忠老外：呼尤徽、段匹磾
 - 友方中的前朝忠良∶孝平王皇后、司馬孚
-- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟
+- 起名隨便：肥銖、朱倀、劉蒜、鄧猛女、李秦授、張豺、褚蒜子、朱秃、直力鞮、薛野䐗、閭大肥、譙小苟、王苟生、姚驢
 - 女王范兒：郭女王、袁女皇
 - 不倒翁：叔孫通、陳平、胡廣、馮道、曹振鏞
 - 自築小屋：袁閎、申屠蟠
