更新人物至卷118節5

--- a/2_世系圖表/2.2_并立政權/晉/十六國/後秦世系圖表.md
+++ b/2_世系圖表/2.2_并立政權/晉/十六國/後秦世系圖表.md
@@ -10,6 +10,9 @@ export_on_save:
 @import "後秦世系表.csv"
 
 ## 世系圖
+- 姚弋仲為後趙忠勇部下，姚襄仕東晉奠基
+- 姚萇弒殺苻堅，繼承前秦主體，被索命死
+- 姚興守成尚可，死後墻倒眾人推，姚泓被劉裕收人頭
 
 ```mermaid
 graph TB
